--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,17 @@
 header {
   background-size: cover;
-  background: linear-gradient(90deg, rgba(1,22,56,1) 0%, rgba(144,85,162,1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(1, 22, 56, 1) 0%,
+    rgba(144, 85, 162, 1) 100%
+  );
 }
 
 body {
   margin: 0;
   padding-bottom: 3rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
 }
 
 #form {
@@ -29,9 +33,11 @@ body {
   border-radius: 2rem;
   margin: 0.25rem;
 }
+
 #input:focus {
   outline: none;
 }
+
 #form > button {
   background: #333;
   border: none;
@@ -47,9 +53,9 @@ body {
   margin: 0;
   padding: 0;
 }
+
 #messages > li {
+  border-radius: 10px;  
+  border-color: #cecece;
   padding: 0.5rem 1rem;
-}
-#messages > li:nth-child(odd) {
-  background: #efefef;
 }
