--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,21 +1,29 @@
-header {
-  background-size: cover;
-  background: linear-gradient(
-    90deg,
-    rgba(1, 22, 56, 1) 0%,
-    rgba(144, 85, 162, 1) 100%
-  );
-}
-
 body {
   margin: 0;
   padding-bottom: 3rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif;
+  font-family: monospace,-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,Arial, sans-serif;
+  background-color: var(--background-root);
+  color: var(--foreground-default);
+}
+
+header > li {
+  margin: 1.1em;
+  display: inline;
+  overflow: hidden;
+  width: 60px;
+  backdrop-filter: blur(10px);
+}
+
+button {
+  color: var(--foreground-default);
+  border:0;
+  width: 50px;
+  height: 20px;
+  background-color: var(--background-default);
 }
 
 #form {
-  background: rgba(0, 0, 0, 0.15);
+  background: rgba(0, 0, 0, 0.30);
   padding: 0.25rem;
   position: fixed;
   bottom: 0;
@@ -24,8 +32,8 @@ body {
   display: flex;
   height: 3rem;
   box-sizing: border-box;
-  backdrop-filter: blur(10px);
 }
+
 #input {
   border: none;
   padding: 0 1rem;
@@ -39,13 +47,13 @@ body {
 }
 
 #form > button {
-  background: #333;
+  background: var(--background-default);
   border: none;
   padding: 0 1rem;
   margin: 0.25rem;
   border-radius: 3px;
   outline: none;
-  color: #fff;
+  color: var(--foreground-default);
 }
 
 #messages {
@@ -55,7 +63,19 @@ body {
 }
 
 #messages > li {
-  border-radius: 10px;  
-  border-color: #cecece;
   padding: 0.5rem 1rem;
+}
+
+@media screen and (max-device-height: 799px), all and (orientation: portrait){
+	#messages > li {
+		font-size: 2.3rem;
+	}
+  #form {
+    
+  }
+}
+
+
+#avatar {
+  border-radius:50%;
 }
